[profile] fix spacing

--- a/app/assets/stylesheets/alert.css.sass
+++ b/app/assets/stylesheets/alert.css.sass
@@ -1,7 +1,7 @@
 @import 'mixins'
 
 .alert-container
-  margin-top: 60px
+  margin-top: 56px
 
 .alert
   position: relative
